--- a/homepage.html
+++ b/homepage.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <p>
-    <a href="./TopSecretRecipes/index.html"> Final Project</a>
+    <a href="./TopSecretRecipes/html/index.html"> Final Project</a>
   </p>
 </body>
