--- a/TopSecretRecipes/html/dinner.html
+++ b/TopSecretRecipes/html/dinner.html
@@ -25,59 +25,40 @@
     document.addEventListener('mousemove', trackMouse)
 </script>
 <div id="wrapper">
-    <h1 class="text">Lunch</h1>
+    <h1 class="text">Dinner</h1>
     <h1 class="important">Remember to never speak of what is revealed below!</h1>
     <div class="recipes">
         <p>
-            As the sun ascends its throne, noon unveils an interlude,
-            a sanctuary for sustenance amid life's whirlwind. Plates emerge adorned with an eclectic assembly,
-            a mosaic of culinary whispers beckoning exploration.
-            The symphony of lunch resonates—a fusion of savory and crisp,
-            a canvas embellished with hues and textures.
-            Amidst this midday riddle, gastronomic adventures await, each bite a revelation.
-            Secrets unfold within layers of artisanal creations, ensnaring the senses in a labyrinth of flavors.
-            The air hums with whispered conversations, an orchestra of clinking cutlery and shared murmurs.
-            Lunch, more than mere sustenance, embodies an enigmatic interlude—a respite from the cosmic tango,
-            a communion with sustenance's mysteries. It invites the curious to decipher its enigmas,
-            offering a glimpse into the ephemeral fusion of moments and
-            meals—a symposium where indulgence meets nourishment in clandestine harmony.
+					Imagine a culinary canvas adorned with succulent slices, gently kissed by a fusion of aromatic spices from distant lands. It’s a symphony of flavors, where tender cuts harmonize with a medley of vibrant hues and textures. Each bite unveils a hidden narrative, as if the chef has encapsulated a journey within the dish. There’s an enigmatic allure, an invitation to explore the depths of taste and indulge in the mystique woven into every delicate layer. It’s a creation that whispers tales of ancient recipes and modern gastronomy, beckoning you to savor the essence of this enigmatic culinary masterpiece.
         </p>
         <div id="meals">
-            <p id="egg">
-                In the garden's whispers, a verdant enigma emerges—a mosaic of crispness,
-                vibrant hues entwined in a dance. Each leaf holds a cryptic tale,
-                a symphony of textures awaiting exploration.
-            </p>
+            <p id="meal1">
+                A tangle of slender threads coated in a lustrous cloak of rich, scarlet elixir. Its captivating aroma dances amid the woven strands, concealing stories of a timeless tradition and the profound simplicity of comfort in each twist and turn.
             <div id="meal1">
                 <section>
                     <img src="../images/lunch/salad.png" alt="salad">
-                    <h2>Tossed Garden Salad</h2>
-                    <p>25 mins | 200 Cals | Easy-to-make</p>
+                    <h2>Spaghetti</h2>
+                    <p>35 mins | 850 Cals | Medium-to-make</p>
                 </section>
             </div>
             <p>
-                In the realm of street fare,
-                an enigmatic union resides—a tantalizing fusion cloaked in simplicity.
-                Embrace the mystery within the bun's embrace,
-                where flavors entwine in clandestine harmony.
+                A tender, seared canvas holds an artistry of flavors, complemented by a symphony of sizzling whispers. Adjacent, a comforting, caramel-hued elixir cradles a dance of golden-browned onions, crowned with a melody of melted cheese, evoking warmth and depth.
             </p>
             <div id="meal2">
                 <section>
                     <img src="../images/lunch/hotdog.png" alt="hotdog">
-                    <h2>Greasy Glizzy</h2>
-                    <p>20 mins | 750 Cals | Easy-to-make</p>
+                    <h2>New York strip with French Onion soup</h2>
+                    <p>45 mins | 1250 cals | Hard-to-make</p>
                 </section>
             </div>
             <p>
-                Within the gastronomic realm,
-                a symphony of layers converges—a mysterious amalgamation concealed within the bun's embrace.
-                Flavors entwine, an enigmatic saga of succulence and secrets awaiting revelation.
+							A canvas of succulence adorned with the secrets of aged allure, accompanied by a symphony of aromatic whispers. Beside it, an enigmatic blend of golden-baked whispers, infused with an essence that enchants the senses, awaits in quiet anticipation.
             </p>
             <div id="meal3">
                 <section>
                     <img src="../images/lunch/burger.png" alt="burger">
-                    <h2>Classic Cheeseburger</h2>
-                    <p>15 minutes | 850 cals | Easy-to-make</p>
+                    <h2>Chicken Parm</h2>
+                    <p>60 mins | 1450 Cals | Hard-to-make</p>
                 </section>
             </div>
         </div>
