adding different transitions to different pages

--- a/TopSecretRecipes/html/dinner.html
+++ b/TopSecretRecipes/html/dinner.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/breakfast.css">
+    <link rel="stylesheet" href="../css/dinner.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
     <title>Top-Secret Recipes</title>
@@ -34,7 +34,7 @@
         <div id="meals">
             <p id="meal1">
                 A tangle of slender threads coated in a lustrous cloak of rich, scarlet elixir. Its captivating aroma dances amid the woven strands, concealing stories of a timeless tradition and the profound simplicity of comfort in each twist and turn.
-            <div id="meal1">
+            <div id="egg">
                 <section>
                     <img src="../images/lunch/salad.png" alt="salad">
                     <h2>Spaghetti</h2>
@@ -44,7 +44,7 @@
             <p>
                 A tender, seared canvas holds an artistry of flavors, complemented by a symphony of sizzling whispers. Adjacent, a comforting, caramel-hued elixir cradles a dance of golden-browned onions, crowned with a melody of melted cheese, evoking warmth and depth.
             </p>
-            <div id="meal2">
+            <div id="meal1">
                 <section>
                     <img src="../images/lunch/hotdog.png" alt="hotdog">
                     <h2>New York strip with French Onion soup</h2>
@@ -54,7 +54,7 @@
             <p>
 							A canvas of succulence adorned with the secrets of aged allure, accompanied by a symphony of aromatic whispers. Beside it, an enigmatic blend of golden-baked whispers, infused with an essence that enchants the senses, awaits in quiet anticipation.
             </p>
-            <div id="meal3">
+            <div id="meal2">
                 <section>
                     <img src="../images/lunch/burger.png" alt="burger">
                     <h2>Chicken Parm</h2>
