--- a/TopSecretRecipes/html/dinner.html
+++ b/TopSecretRecipes/html/dinner.html
@@ -21,8 +21,8 @@
                 A tangle of slender threads coated in a lustrous cloak of rich, scarlet elixir. Its captivating aroma dances amid the woven strands, concealing stories of a timeless tradition and the profound simplicity of comfort in each twist and turn.
             <div id="meal1">
                 <section>
-                    <img src="../images/lunch/salad.png" alt="salad">
-                    <h2>Spaghetti</h2>
+                    <img src="../images/dinner/spaghetti.png" alt="salad">
+                    <h2>Spaghetti</h2> 
                     <p>35 mins | 850 Cals | Medium-to-make</p>
                 </section>
             </div>
@@ -31,7 +31,7 @@
             </p>
             <div id="meal2">
                 <section>
-                    <img src="../images/lunch/hotdog.png" alt="hotdog">
+                    <img src="../images/dinner/steak.png" alt="hotdog">
                     <h2>NewYork strip</h2>
                     <p>45 mins | 1250 cals | Hard-to-make</p>
                 </section>
@@ -41,7 +41,7 @@
             </p>
             <div id="meal3">
                 <section>
-                    <img src="../images/lunch/burger.png" alt="burger">
+                    <img src="../images/dinner/cheese.png" alt="burger">
                     <h2>Chicken Parm</h2>
                     <p>60 mins | 1450 Cals | Hard-to-make</p>
                 </section>
