--- a/TopSecretRecipes/html/dessert.html
+++ b/TopSecretRecipes/html/dessert.html
@@ -55,6 +55,19 @@
                         </section>
                     </div>
                 </div>
+                <footer>
+                    <p>
+                        <a href="index.html">Home Page</a>
+                        ---
+                        <a href="breakfast.html">Breakfast</a>
+                        ---
+                        <a href="lunch.html">Lunch</a>
+                        ---
+                        <a href="dinner.html">Dinner</a>
+                        ---
+                        <a href="dessert.html">Dessert</a>
+                    </p>
+                </footer>
             </div>
         </div>
     </body>
