--- a/TopSecretRecipes/html/dinner.html
+++ b/TopSecretRecipes/html/dinner.html
@@ -9,44 +9,57 @@
     <title>Top-Secret Recipes</title>
 </head>
 <body>
-<div id="wrapper">
-    <h1 class="text">Dinner</h1>
-    <h1 class="important">Remember to never speak of what is revealed below!</h1>
-    <div class="recipes">
-        <p>
-					Imagine a culinary canvas adorned with succulent slices, gently kissed by a fusion of aromatic spices from distant lands. It’s a symphony of flavors, where tender cuts harmonize with a medley of vibrant hues and textures. Each bite unveils a hidden narrative, as if the chef has encapsulated a journey within the dish. There’s an enigmatic allure, an invitation to explore the depths of taste and indulge in the mystique woven into every delicate layer. It’s a creation that whispers tales of ancient recipes and modern gastronomy, beckoning you to savor the essence of this enigmatic culinary masterpiece.
-        </p>
-        <div id="meals">
-            <p id="egg">
-                A tangle of slender threads coated in a lustrous cloak of rich, scarlet elixir. Its captivating aroma dances amid the woven strands, concealing stories of a timeless tradition and the profound simplicity of comfort in each twist and turn.
-            <div id="meal1">
-                <section>
-                    <img src="../images/dinner/spaghetti.png" alt="salad">
-                    <h2>Spaghetti</h2> 
-                    <p>35 mins | 850 Cals | Medium-to-make</p>
-                </section>
-            </div>
+    <div id="wrapper">
+        <h1 class="text">Dinner</h1>
+        <h1 class="important">Remember to never speak of what is revealed below!</h1>
+        <div class="recipes">
             <p>
-                A tender, seared canvas holds an artistry of flavors, complemented by a symphony of sizzling whispers. Adjacent, a comforting, caramel-hued elixir cradles a dance of golden-browned onions, crowned with a melody of melted cheese, evoking warmth and depth.
+                        Imagine a culinary canvas adorned with succulent slices, gently kissed by a fusion of aromatic spices from distant lands. It’s a symphony of flavors, where tender cuts harmonize with a medley of vibrant hues and textures. Each bite unveils a hidden narrative, as if the chef has encapsulated a journey within the dish. There’s an enigmatic allure, an invitation to explore the depths of taste and indulge in the mystique woven into every delicate layer. It’s a creation that whispers tales of ancient recipes and modern gastronomy, beckoning you to savor the essence of this enigmatic culinary masterpiece.
             </p>
-            <div id="meal2">
-                <section>
-                    <img src="../images/dinner/steak.png" alt="hotdog">
-                    <h2>NewYork strip</h2>
-                    <p>45 mins | 1250 cals | Hard-to-make</p>
-                </section>
-            </div>
-            <p>
-							A canvas of succulence adorned with the secrets of aged allure, accompanied by a symphony of aromatic whispers. Beside it, an enigmatic blend of golden-baked whispers, infused with an essence that enchants the senses, awaits in quiet anticipation.
-            </p>
-            <div id="meal3">
-                <section>
-                    <img src="../images/dinner/cheese.png" alt="burger">
-                    <h2>Chicken Parm</h2>
-                    <p>60 mins | 1450 Cals | Hard-to-make</p>
-                </section>
+            <div id="meals">
+                <p id="egg">
+                    A tangle of slender threads coated in a lustrous cloak of rich, scarlet elixir. Its captivating aroma dances amid the woven strands, concealing stories of a timeless tradition and the profound simplicity of comfort in each twist and turn.
+                <div id="meal1">
+                    <section>
+                        <img src="../images/dinner/spaghetti.png" alt="salad">
+                        <h2>Spaghetti</h2> 
+                        <p>35 mins | 850 Cals | Medium-to-make</p>
+                    </section>
+                </div>
+                <p>
+                    A tender, seared canvas holds an artistry of flavors, complemented by a symphony of sizzling whispers. Adjacent, a comforting, caramel-hued elixir cradles a dance of golden-browned onions, crowned with a melody of melted cheese, evoking warmth and depth.
+                </p>
+                <div id="meal2">
+                    <section>
+                        <img src="../images/dinner/steak.png" alt="hotdog">
+                        <h2>NewYork strip</h2>
+                        <p>45 mins | 1250 cals | Hard-to-make</p>
+                    </section>
+                </div>
+                <p>
+                                A canvas of succulence adorned with the secrets of aged allure, accompanied by a symphony of aromatic whispers. Beside it, an enigmatic blend of golden-baked whispers, infused with an essence that enchants the senses, awaits in quiet anticipation.
+                </p>
+                <div id="meal3">
+                    <section>
+                        <img src="../images/dinner/cheese.png" alt="burger">
+                        <h2>Chicken Parm</h2>
+                        <p>60 mins | 1450 Cals | Hard-to-make</p>
+                    </section>
+                </div>
             </div>
         </div>
+        <footer>
+            <p>
+                <a href="index.html">Home Page</a>
+                ---
+                <a href="breakfast.html">Breakfast</a>
+                ---
+                <a href="lunch.html">Lunch</a>
+                ---
+                <a href="dinner.html">Dinner</a>
+                ---
+                <a href="dessert.html">Dessert</a>
+            </p>
+        </footer>
     </div>
-</div>
 </body>
