footer coverted to a list

--- a/TopSecretRecipes/html/dinner.html
+++ b/TopSecretRecipes/html/dinner.html
@@ -49,17 +49,17 @@
             </div>
         </div>
         <footer>
-            <p>
-                <a href="index.html">Home Page</a>
+            <ul>
+                <li><a href="index.html">Home Page</a></li>
                 ---
-                <a href="breakfast.html">Breakfast</a>
+                <li><a href="breakfast.html">Breakfast</a></li>
                 ---
-                <a href="lunch.html">Lunch</a>
+                <li><a href="lunch.html">Lunch</a></li>
                 ---
-                <a href="dinner.html">Dinner</a>
+                <li><a href="dinner.html">Dinner</a></li>
                 ---
-                <a href="dessert.html">Dessert</a>
-            </p>
+                <li><a href="dessert.html">Dessert</a></li>
+            </ul>
         </footer>
     </div>
 </body>
