--- a/TopSecretRecipes/html/contactInfo.html
+++ b/TopSecretRecipes/html/contactInfo.html
@@ -65,17 +65,17 @@
                 <p>(you will need to use your browsers tab for any further navigation)</p>
             </main>
             <footer>
-                <p>
-                    <a href="index.html">Home Page</a>
+                <ul>
+                    <li><a href="index.html">Home Page</a></li>
                     ---
-                    <a href="breakfast.html">Breakfast</a>
+                    <li><a href="breakfast.html">Breakfast</a></li>
                     ---
-                    <a href="lunch.html">Lunch</a>
+                    <li><a href="lunch.html">Lunch</a></li>
                     ---
-                    <a href="dinner.html">Dinner</a>
+                    <li><a href="dinner.html">Dinner</a></li>
                     ---
-                    <a href="dessert.html">Dessert</a>
-                </p>
+                    <li><a href="dessert.html">Dessert</a></li>
+                </ul>
             </footer>
         </div>
     </body>
