meta content added

--- a/TopSecretRecipes/html/index.html
+++ b/TopSecretRecipes/html/index.html
@@ -2,6 +2,14 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
+    <meta content="
+        Unlock the mystery behind a tantalizing secret food recipe that tantalizes 
+        taste buds like never before! Dive into this exclusive culinary experience, 
+        where every ingredient harmonizes to create a symphony of flavors. 
+        Discover the clandestine steps to a dish that promises to elevate your dining adventures. 
+        Unveil the secret behind this delectable recipe and awaken your palate to an extraordinary culinary delight!
+    ">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/homepage.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
